<resources>
    <!--<string name="app_name">Базовые станции</string>-->
    <string name="site_search">№ БС или адрес</string>
    <string name="title">Поиск базовых станций\nМосквы и Московской области</string>
    <string name="search">ПОИСК</string>
    <string name="Check">Поcмотреть на карте</string>
    <string name="title_activity_maps">Карта</string>
    <string name="searchHere">Искать БС на карте</string>
    <string name="nearestBS">ближайшие БС Оператора</string>
    <string-array name="columns">
        <item>"SITE"</item>
        <item>"Address"</item>
        <item>"Object"</item>
        <item>"GPS_Latitude"</item>
        <item>"GPS_Longitude"</item>
    </string-array>

    <string-array name="columnsChoice">
        <item>"SITE"</item>
        <item>"Address"</item>
    </string-array>

    <string-array name="operatorsStrings">
        <item>"МТС"</item>
        <item>"Билайн"</item>
        <item>"МегаФон"</item>
        <item>"Теле2"</item>
    </string-array>
    <string name="MTS">МТС</string>
    <string name="MGF">МегаФон</string>
    <string name="VMK">Билайн</string>
    <string name="TELE">Теле2</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_map2">MapActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps2">Map</string>
    <string name="radius">Радиус</string>
    <string name="operarators">Операторы</string>
    <string name="maps">Карта</string>
    <string name="ok">OK</string>
    <string name="cancel">Oтмена</string>
    <string name="attention">Внимание</string>
    <string name="all_site">Все БС</string>
    <string name="all_site_description">Все БС (замедление работы)</string>
    <string name="site_list_title">Выбор БС:</string>
    <string name="route">Проложить маршрут</string>
    <string name="ALL">Все</string>

    <string name="admob_app_id">ca-app-pub-3809842406726636~9510522814</string>
    <string name="admob_test_device">C226C5E27568110562C00F33D0424CBE</string>
    <string name="banner_ad_unit_id">ca-app-pub-3809842406726636/2718362688</string>
    <string name="banner_ad_unit_id_2">ca-app-pub-3809842406726636/6757680042</string>
    <string name="banner_ad_unit_id_3">ca-app-pub-3809842406726636/2241687286</string>
    <string name="interstitial_ad_unit_id_1">ca-app-pub-3809842406726636/9147896086</string>
    <string name="interstitial_test_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_test_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="rewarded_ad_unit_id_1">ca-app-pub-3809842406726636/6993577860</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3809842406726636~9510522814</string>-->

    <string name="error_search_empty">Поле поиска не заполнено</string>
    <string name="error_operator_index">Оператор не выбран</string>
    <string name="error">Внутренняя ошибка</string>
    <string name="error_no_succes">Совпадений не найдено</string>
    <string name="error_many_success">Слишком много совпадений</string>
    <string name="bs_number">БC №</string>
    <string name="bs_address">Адрес:</string>
    <string name="no_data">нет данных</string>
    <string name="bs_coordinates">Координаты:</string>
    <string name="bs_object">Объект:</string>
    <string name="bs_address_auto">Адрес по\nкоординатам:</string>
    <string name="edit">Редактировать</string>
    <string name="edit_bs">Редактировать</string>
    <string name="bs_status">Статус:</string>
    <string name="status_active">действующая</string>
    <string name="hybrid">Гибрид</string>
    <string name="satelit">Спутник</string>
    <string name="map_type">Тип карты</string>
    <string name="map_standart">Схема</string>
    <string name="map_starting_message">Для поиска БС на карте используйте долгое нажатие</string>
    <string name="map_no_sites">Здесь БС не найдено</string>
    <string name="dialog_radius_title">Радиус зоны поиска (км)</string>
    <string name="comment_user">Комментарии:</string>
    <string name="comment_write">Оставить комментарий…</string>
    <string name="save">Сохранить</string>
    <string name="comment_name">Ваше имя</string>
    <string name="site_number">Номер БС:</string>
    <string name="number_default">77–1234</string>
    <string name="site_coordinates">Координаты:</string>
    <string name="site_coordinates_necessarily">Координаты*:</string>
    <string name="object_default">башня, ОДН, здание</string>
    <string name="address_default">город, улица, дом</string>
    <string name="site_operator">Оператор*:</string>
    <string name="operator">Оператор:</string>
    <string name="_37_123456">37.123456</string>
    <string name="_55_123456">55.123456</string>
    <string name="error_site_number">Введите номер БС</string>
    <string name="error_site_coordinates">Введите координаты БС или укажите точку на карте</string>
    <string name="error_site_coordinates_border">"Координаты БС не могут находиться за пределами Московского региона"</string>
    <string name="error_refresh_site">Не удалось обновить список БС</string>
    <string name="sites_refresh">Базовая станция сохранена</string>
    <string name="sites_edit_refresh">Изменения сохранены</string>
    <string name="error_site_save">Не удалось сохранить БС. Проверьте интернет-соединение</string>
    <string name="error_site_edit">Не удалось редактировать БС. Проверьте интернет-соединение</string>
    <string name="site_saved">Базовая станция сохранена. Обновляется локальная база</string>
    <string name="map_coordinates_tittle">Местоположение БС</string>
    <string name="activity_draft_title">Добавить БС</string>
    <string name="name_nick">имя или ник</string>
    <string name="select_operator">Выберите оператора</string>
    <string name="edit_site_no_changes">Нет изменений для сохранения</string>
    <string name="image_size_too_match">Размер одной фотографий не может быть больше 7 Мб</string>
    <string name="image_type_nod_valid">Файл не является фотографией</string>
    <string name="image_count_to_match">Нельзя сохранить более 3 фотографий</string>
    <string name="exit">Выйти</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="menu">Меню</string>
    <string name="info">Информация</string>
    <string name="job">Работа на БС</string>
    <string name="drawer_open">открыт</string>
    <string name="drawer_close">закрыт</string>
    <string name="message_for_developer">Написать разработчику</string>
    <string name="e_mail_hint">e-mail (необязательно)</string>
    <string name="message_hint">Сообщение, замечание, предложение....</string>
    <string name="send">Отправить</string>
    <string name="enter_message">Введите сообщение!</string>
    <string name="message_send_success">Сообщение отправлено разработчику</string>
    <string name="message_send_error">Отправка не удалась. Проверьте интернет-соединение и повторите отправку</string>
    <string name="app_rating">Оценить приложение</string>
    <string name="app_advertising">Реклама</string>
    <string name="advertising">Для отключения рекламы на 3 месяца необходимо просмотреть один рекламный ролик</string>
    <string name="search_bs">Искать БС</string>
    <string name="chose_photo_source">Выберите источник:</string>
    <string name="photo">Фото:</string>
    <string name="job_list">Список работ на БС</string>
    <string name="create_job_label">Разместить работу на БС</string>
    <string name="notification_job">Уведомлять о появлении новой работы</string>
    <string name="error_switch_notification">Не удалось переключить\nПроверьте интенет-соединение</string>
    <string name="error_load_job_notification">Не удалось загрузить список\nПроверьте интенет-соединение</string>
    <string name="empty_job_notification">На данный момент\nнет предложений\nо работе на БС</string>
    <string name="contacts_necessarily">Контакты:*</string>
    <string name="contacts">Контакты:</string>
    <string name="create_job">Разместить</string>
    <string name="job_description_necessarily">Описание работ:*</string>
    <string name="job_description">Описание работ:</string>
    <string name="job_price">Стоимость:</string>
    <string name="not_contact">Не заполнено поле с контактами</string>
    <string name="not_description">Не заполнено поле описания работы</string>
    <string name="not_name">Не заполнено поле названия работы</string>
    <string name="job_created">Работа на БС размещена</string>
    <string name="error_job_created">Не удалось отправить заявку. Проверьте интернет-соединение</string>
    <string name="job_name_necessarily">Название работы:*</string>
    <string name="job_name">Название работы:</string>
    <string name="hint_short_name">максимум 40 символов</string>
    <string name="job_details">Детали работы</string>
    <string name="my_job_list">Мой список работ</string>
    <string name="dialog_site_link_title">Поиск БС</string>
    <string name="dialog_site_list_link_title">Выбирете БС:</string>
    <string name="close_job">Снять с публикации</string>
    <string name="job_closed">Работа снята с публикации</string>
    <string name="error_job_closed">Не удалось снять работу с публикации. Проверьте интернет-соединение</string>
    <string name="job_public">Опубликовать</string>
    <string name="job_publiced">Работа опубликована</string>
    <string name="error_public">Не удалось опубликовать работу. Проверьте интернет-соединение</string>
    <string name="job_edited">Работа отредактирована</string>
    <string name="error_job_edited">Не удалось отредактировать работу. Проверьте интернет-соединение</string>
    <string name="panorama_title">Панорамы улиц</string>
    <string name="map_job_title">Карта работ</string>
    <string name="map_job">Карта работ</string>
    <string name="error_load_job_map">Ошибка загрузки карты</string>
    <string name="no_job_map">Нет данных для карты</string>
    <string name="recommended_share">Рекомендовать приложение</string>
    <string name="function_job_description">В меню приложения появилась новая функция поиска и предложения работ по проектированию, строительству и модернизации БС.  Там же можно подписаться на получение уведомлений при появлении новой работы.</string>
    <string name="show">Показать</string>

</resources>
