<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.engineeringforyou.basesite.presentation.map.MapActivity">
    <item
        android:id="@+id/menu_item_radius"
        android:orderInCategory="100"
        android:title="@string/radius" />

    <item
        android:title="@string/operarators"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/menu_group_operators"
                android:checkableBehavior="single"
                app:showAsAction="never">
                <item
                    android:id="@+id/menu_item_mts"
                    android:title="@string/MTS" />
                <item
                    android:id="@+id/menu_item_mgf"
                    android:title="@string/MGF" />
                <item
                    android:id="@+id/menu_item_vmk"
                    android:title="@string/VMK" />
                <item
                    android:id="@+id/menu_item_tele2"
                    android:title="@string/TELE" />
                <item
                    android:id="@+id/menu_item_all"
                    android:title="@string/ALL" />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/map_type"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/menu_group_map"
                android:checkableBehavior="single"
                app:showAsAction="never">
                <item
                    android:id="@+id/menu_item_map_standart"
                    android:title="@string/map_standart" />

                <item
                    android:id="@+id/menu_item_map_hybrid"
                    android:title="@string/hybrid" />

                <item
                    android:id="@+id/menu_item_map_satelit"
                    android:title="@string/satelit" />
            </group>
        </menu>
    </item>
</menu>