<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/item_info"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/info" />

        <item
            android:id="@+id/item_mail"
            android:icon="@drawable/ic_mail"
            android:title="@string/message_for_developer" />

        <item
            android:id="@+id/item_rating"
            android:icon="@drawable/ic_rating"
            android:title="@string/app_rating" />

        <item
            android:id="@+id/item_advertising"
            android:icon="@drawable/ic_money"
            android:title="@string/app_advertising" />

        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>