<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context=".presentation.searchsite.SearchSiteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/site_search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@id/site_search_btn"
                android:layout_toStartOf="@id/site_search_btn"
                android:hint="@string/site_search"
                app:errorTextAppearance="@style/ErrorText">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/site_search"
                    style="@style/TextInputCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/site_search_btn"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/site_search_layout"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/site_search_layout"
                android:drawableLeft="@drawable/ic_search_24dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_search_24dp"
                android:padding="16dp"
                android:text="@string/search" />

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/search_here"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_map_24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_map_24dp"
            android:padding="16dp"
            android:text="@string/searchHere" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/operators_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_mts"
                style="@style/RadioButton"
                android:checked="true"
                android:text="@string/MTS" />

            <RadioButton
                android:id="@+id/radio_vmk"
                style="@style/RadioButton"
                android:text="@string/VMK" />

            <RadioButton
                android:id="@+id/radio_mgf"
                style="@style/RadioButton"
                android:text="@string/MGF" />

            <RadioButton
                android:id="@+id/radio_tele"
                style="@style/RadioButton"
                android:text="@string/TELE" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <include
        layout="@layout/progress_with_background"
        android:visibility="gone" />
</FrameLayout>
